unpackaged/main/default/objects/Framework__Spark_Plug_Extension__mdt/Framework__Spark_Plug_Extension__mdt.object-meta.xml
<CustomObject>
    <description>Spark Plug Extensions allow arbitrary screens to be added to specific Fonteva workflows.</description>
    <label>Spark Plug Extension</label>
    <pluralLabel>Spark Plug Extensions</pluralLabel>
</CustomObject>