unpackaged/main/default/objects/Framework__Spark_Plug_Extension__mdt/fields/Framework__Spark_Plug_Extension_Point__c.field-meta.xml
<CustomField>
    <fullName>Framework__Spark_Plug_Extension_Point__c</fullName>
    <description>Extension point that needs to be implemented.</description>
    <inlineHelpText>Extension point that needs to be implemented.</inlineHelpText>
    <label>Spark Plug Extension Point</label>
    <referenceTo>Framework__Spark_Plug_Extension_Point__mdt</referenceTo>
    <relationshipLabel>SparkPlug Extension Point</relationshipLabel>
    <relationshipName>Spark_Plug_Extension_Point</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>